--- a/release_notes/1.0.0.md
+++ b/release_notes/1.0.0.md
@@ -1,2 +1,3 @@
-* fix: Workflow file updates
-* Update Python version for 3.13
+| Version   | Date Modified (DD-MM-YYYY)    | ChangeHistory                         |
+| :-------- | :---------------------------- | :------------------------------------ |   
+| 1.0.0     | 30-01-2026                    | Initial commit with SOAR actions      |
